added favicon and final touch!

--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" 
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    referrerpolicy="no-referrer" />
+    <link rel="shortcut icon" href="images/favicon_io (1)/android-chrome-512x512.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon_io (1)/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="inage/png" sizes="32x32" href="images/favicon_io (1)/favicon-32x32.png">
+    <link rel="icon" type="inage/png" sizes="16x16" href="images/favicon_io (1)/favicon-16x16.png">
+
     <title>Countdown</title>
 </head>
 <body>
@@ -17,18 +24,22 @@
     <div class="timer">
         <div id="hour" class="hour">
             <h2 id="hours"></h2>
-            <h4>Hour</h4>
+            <h4>Hours</h4>
         </div>
 
         <div id="minute" class="minute">
             <h2 id="minutes"></h2>
-            <h4>Minute</h4>
+            <h4>Minutes</h4>
         </div>
 
         <div id="second" class="second">
             <h2 id="seconds"></h2>
-            <h4>Second</h4>
+            <h4>Seconds</h4>
         </div>
+    </div>
+
+    <div id="final-message">
+        <h3>😍You Are <span>24</span> years old now!😍</h3>
     </div>
     <script src="app.js"></script>
 </body>
